tests/neg/i11118.check
-- Warning: tests/neg/i11118.scala:2:12 --------------------------------------------------------------------------------
2 |val (a,b) = (1,2,3) // error // warning
  |            ^^^^^^^
  |       pattern's type (Any, Any) does not match the right hand side expression's type (Int, Int, Int)
  |
  |       If the narrowing is intentional, this can be communicated by adding `.runtimeChecked` after the expression,
  |       which may result in a MatchError at runtime.
  |       This patch can be rewritten automatically under -rewrite -source 3.8-migration.
-- [E030] Match case Unreachable Error: tests/neg/i11118.scala:2:4 -----------------------------------------------------
2 |val (a,b) = (1,2,3) // error // warning
  |    ^
  |    Unreachable case
  |
  | longer explanation available when compiling with `-explain`
